@@ -1,19 +1,21 @@
 package fr.insee.kraftwerk.core;
 
+import lombok.Getter;
+import lombok.extern.log4j.Log4j2;
+import org.json.simple.parser.JSONParser;
+import org.json.simple.parser.ParseException;
+
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.concurrent.TimeUnit;
-
-import org.json.simple.parser.JSONParser;
-import org.json.simple.parser.ParseException;
-
-import lombok.extern.log4j.Log4j2;
 
 /**
  * This class contains paths and fixed parameters used in the application.
@@ -43,6 +45,7 @@ public final class Constants {
 	public static final char CSV_PAPER_DATA_SEPARATOR = '#'; //TODO: get it from properties
 	public static final char CSV_REPORTING_DATA_SEPARATOR = ','; //TODO: get it from properties
 	public static final char CSV_OUTPUTS_SEPARATOR = ';'; //TODO: get it from properties
+	@Getter
 	private static char csvOutputQuoteChar = '"';
 
 	// ----- Fixed parameters
@@ -51,6 +54,7 @@ public final class Constants {
 	public static final String MULTIMODE_DATASET_NAME = "MULTIMODE";
 	public static final String REPORTING_DATA_GROUP_NAME = "REPORTINGDATA";
 	public static final String REPORTING_DATA_INTERVIEWER_ID_NULL_PLACEHOLDER = "NON_AFFECTE_";
+	public static final String END_LINE = "\n";
 
 
 	// ----- Explicit Variables Names
@@ -106,6 +110,7 @@ public final class Constants {
 	public static final String SITUATION_NAME = "situation";
 	public static final String CATEGORY_NAME = "category";
 	public static final String OCCUPANT_NAME = "occupant";
+	public static final String REPORTING_DATA_SURVEY_VALIDATION_NAME = REPORTING_DATA_PREFIX_NAME + SURVEY_VALIDATION_DATE_NAME;
 	
 	// ------ Pairwise variables
 	
@@ -222,38 +227,17 @@ public final class Constants {
 	 *
 	 * @throws MalformedURLException if the path given is incorrect.
 	 * */
-	public static URL convertToUrl(String filePath) throws MalformedURLException {
+	public static URL convertToUrl(String filePath) throws MalformedURLException, URISyntaxException {
 		if(filePath.startsWith("http")) {
-			return new URL(filePath);
+			return new URI(filePath).toURL();
 		} else {
 			return new File(filePath).toURI().toURL();
 		}
 	}
 
-
-	/** Convert a string path to an URL object.
-	 *
-	 * @param filePath
-	 * Can be a URL or a local absolute path.
-	 *
-	 * @return
-	 * A java.net.URL object.
-	 *
-	 * @throws MalformedURLException if the path given is incorrect.
-	 * */
-	public static URL convertToUrl(Path filePath) throws MalformedURLException {
-		return filePath.toFile().toURI().toURL();
-	}
-
-
 	public static void setCsvOutputQuoteChar(char csvOutputQuoteChar) {
 		Constants.csvOutputQuoteChar = csvOutputQuoteChar;
 	}
-
-	public static char getCsvOutputQuoteChar() {
-		return csvOutputQuoteChar;
-	}
-
 
 	public static String[] getEnoVariables() {
 		return ENO_VARIABLES;
